--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -20,7 +20,7 @@ TODO: Do we want an example of a swiper in the styleguide?
 */
 
 // 1. Prevent slide flicker during transforms & transitions. See http://stackoverflow.com/a/4674791
-// TODO: explanations
+// TODO: Other explanations.
 .swiper-container {
   overflow: hidden;
   -webkit-backface-visibility: hidden;
@@ -36,9 +36,9 @@ TODO: Do we want an example of a swiper in the styleguide?
   -o-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 
-  -webkit-transition-property:-webkit-transform;  // [1]
-  -o-transition-property:-o-transform;            // [1]
-  -ms-transition-property:-ms-transform;          // [1]
+  -webkit-transition-property: -webkit-transform;  // [1]
+  -o-transition-property: -o-transform;            // [1]
+  -ms-transition-property: -ms-transform;          // [1]
   transition-property: transform;                 // [1]
 }
 
