List item leave and checked animations with promises  * list item directive optionally requires list directive  * register and unregister editor closed callback when list item is opened in editor  * removed data binding from task checkbox and call taskChecked in editor to update correct values into list  * added initial max-height to .animate-list-item-leave to make max-height animation working in iOS.  * use track by in list item ng-repeat  * fool UI with programmatically set class in leave item promise to display checkbox as checked when returning from editor where item checkbox was checked  * checkbox checked with animation

--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -491,11 +491,20 @@ input[type="checkbox"] + label:before {
   content: @icon-selection-empty;
 }
 input[type="checkbox"]:checked + label:before {
+  transition: color 2s ease;
   color: @color-checkbox-checked;
   content: @icon-selection-checked;
 }
 
-
+// 1. Override unchecked checkbox to look like :checked.
+//    NOTE: AngularJS UI may not be updated ($digest is not run) at the time deferred ng-repeat leave animation starts,
+//          so checkbox CSS is set programmatically.
+.checked-checkbox {
+  input[type="checkbox"] + label:before {
+    color: @color-checkbox-checked;   // [1]
+    content: @icon-selection-checked; // [1]
+  }
+}
 //////// NEW END ////////////////////////
 
 
