--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -7,9 +7,15 @@
 @delay-animate-item-shrink: .5s;
 @timing-animate-item: cubic-bezier(0.250, 0.460, 0.450, 0.940);
 
+// 1. Set initial max-height for item to make max-height animation work in WebKit browsers.
+.animate-list-item-leave {
+  max-height: 44px; // [1]
+}
+
 // 1. TODO: remove when grid is implemented and correct values are inherited
 // 2. Animate opacity first, delay max-height animation by 0.5s.
 .list-item-leave-add, {
+  pointer-events: none;
   max-height: 44px; // [1]
   opacity: 1;       // [1]
 
@@ -45,6 +51,22 @@
   opacity: 0;     // [1]
   max-height: 0;  // [2]
 }
+
+.list-item-completing-add {
+  transition-duration: 2s;
+  input[type="checkbox"] + label:before {
+    transition: color 2s ease;
+  }
+}
+
+.list-item-completing,
+.list-item-completing-add.list-item-completing-add-active {
+  input[type="checkbox"] + label:before {
+    color: @color-checkbox-checked;
+    content: @icon-selection-checked;
+  }
+}
+
 
 //////// NEW END ////////////////////////
 
