Refactored group-navigation to group-symmetrical, fixed layout here and there to better match design.

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -122,6 +122,12 @@ html {
   margin-right: auto;
 }
 
+.center-horizontally-absolute() {
+  .center-horizontally;
+  left: 0;
+  right: 0;
+}
+
 
 //////// NEW END ////////////////////////
 
