--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -81,13 +81,10 @@ a.click-to-slide {
   }
 }
 
+//////// NEW START ////////////////////////
+
 /*
-Hide arrow from link navigation when content is not swipeable.
-
-
-```markup
-<div class="loading-animation"></div>
-```
+Navigation links
 */
 .link-navigation-back:not(.not-swipeable):before {
   .set-icon-font;
@@ -102,3 +99,5 @@ Hide arrow from link navigation when content is not swipeable.
   font-size: 8px;
   padding-left: 5px;
 }
+
+//////// NEW END ////////////////////////
