--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -480,7 +480,7 @@ center.
 @max-width-group-symmetrical-middle: 70px;
 
 .group-symmetrical {
-  //height: @grid-vertical;
+  height: @grid-vertical;
   line-height: @grid-vertical;
 }
 .group-symmetrical--left {
