Swipe day slides to clicked date in datepicker:  * SwiperService getSwiperActiveSlideIndex returns activeLoopIndex in loop mode and otherwise activeIndex  * only update date in active slide if it is no longer up to date

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -36,9 +36,9 @@ TODO: Do we want an example of a swiper in the styleguide?
   -o-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 
-  -webkit-transition-property: -webkit-transform;  // [1]
-  -o-transition-property: -o-transform;            // [1]
-  -ms-transition-property: -ms-transform;          // [1]
+  -webkit-transition-property: -webkit-transform; // [1]
+  -o-transition-property: -o-transform;           // [1]
+  -ms-transition-property: -ms-transform;         // [1]
   transition-property: transform;                 // [1]
 }
 
@@ -224,7 +224,7 @@ button.selected-keyword {
 
 input[type="checkbox"]:checked ~ a#accordionTitleLink {
   color: @default-element;
-  .fade-fast;
+  // .fade-fast;
 }
 
 div#accordionTitleHeightFix {
