added highlight color to styleguide

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -225,7 +225,8 @@ Text colors
 TODO: This is just a short example, needs to be completed when colors are confirmed
 ```markup
 <div style="margin-bottom: 5px; background: black">content: black</div>
-<div style="margin-bottom: 5px; background: #3b3b3b">logo: #3b3b3b;</div>
+<div style="margin-bottom: 5px; background: #3b3b3b">logo: #3b3b3b</div>
+<div style="margin-bottom: 5px; background: #0f82fe">highlight: #0f82fe</div>
 <div style="margin-bottom: 5px; background: #999999">icon: #999999</div>
 <div style="margin-bottom: 5px; background: #dadada">separator: #dadada</div>
 <div style="margin-bottom: 5px; background: #70c041">instruction: #70c041</div>
